Prevent scrollbar layout shift

--- a/src/assets/css/generic/modern-reset.css
+++ b/src/assets/css/generic/modern-reset.css
@@ -16,6 +16,7 @@ html {
 	-webkit-text-size-adjust: none;
 	text-size-adjust: none;
 	scroll-behavior: smooth;
+	scrollbar-gutter: stable;
 }
 
 /* Enable keyword animations */
